Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15524

Do not write garbage or disable page checksums for temporary tables

    XMLWordPrintable

Details

    Description

      As noted in MDEV-14925, InnoDB disables page checksums for temporary tablespaces. If pages are corrupted in the file system, InnoDB would fail to notice it, and it could crash in some ‘random’ place much later.

      Even worse, InnoDB is not clearing previous page contents when allocating a page for a temporary tablespace (table or undo log data). Because the temporary tablespace (ibtmp1) is currently not encrypted, this could leak unrelated information from encrypted tablespaces to the temporary tablespace file.

      Fixing these issues might slightly reduce the performance of temporary tables in InnoDB. Performance-conscious users should probably CREATE TEMPORARY TABLE…ENGINE=Aria in the first place. But, the application logic should take into account that ROLLBACK is a no-op in ENGINE=Aria.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.