MDEV-15524 Do not disable page checksums for temporary tables

buf_flush_init_for_writing(): Remove the parameter skip_checksum.